# gfftk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  README.md  codecov.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: production-release.yml  python-publish.yml  release.yml  test-release.yml  tests.yml
docs/: API.md  API.rst  USAGE.md  conf.py  filtering.rst  index.rst  install.rst  modules.rst  requirements.txt  tutorial.rst  usage.rst
docs/API/: consensus.rst  convert.rst  fasta.rst  genbank.rst  gff.rst  go.rst  stats.rst  utils.rst
gfftk/: __init__.py  __main__.py  __version__.py  compare.py  consensus.py  convert.py  fasta.py  genbank.py  gff.py  go.py  help_formatter.py  interlap.py  log.py  paf.py  rename.py  sanitize.py  sort.py  stats.py  utils.py
tests/: README.md
tests/data/: test_all_models.gff3  test_genome.fa  test_protein-alignments.gff3
tests/integration/: test_cli.py  test_cli_commands.py
tests/unit/: test_basic.py  test_compare.py  test_consensus.py  test_consensus_advanced.py  test_consensus_coverage.py  test_consensus_fixed.py  test_consensus_functions.py  test_consensus_more.py  test_consensus_utrs.py  test_convert.py  test_convert_functions.py  test_fasta.py  test_gff.py  test_gff_functions.py  test_paf.py  test_utils.py
tests/unit/test_data/: test_genome.fa
